--- a/template-app/main/CMakeLists.txt
+++ b/template-app/main/CMakeLists.txt
@@ -1,2 +1,4 @@
 idf_component_register(SRCS "maze.c" "main.c"
                     INCLUDE_DIRS ".")
+                    
+target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-error)
