--- a/template-app/main/CMakeLists.txt
+++ b/template-app/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "encoder.c" "motor_control.c" "ultrasonicLaunch.c" "robot.c" "maze.c" "main.c"
+idf_component_register(SRCS "ultrasonicLaunch.c" "encoder.c" "motor_control.c" "robot.c" "maze.c" "main.c"
                     INCLUDE_DIRS ".")
                     
 target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-error)
